# muda-app

./: .gitmodules  CMakeLists.txt  README.md  xmake.lua
src/: hello_muda.cu  hello_muda.h  main.cpp  main.cu
